--- a/index.html
+++ b/index.html
@@ -223,10 +223,12 @@
                 and managed game entities. Incorporated features such as shooting arrows, avoiding obstacles, and tracking scores
                 and lives.</p>
         <h3>Project Results</h3>
+        <div class="video-container">
         <video id="project-video" autoplay loop muted controls width="60%" height="auto" poster="project_video_poster.jpg">
             <source src="project_results_video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+        </div>
         <p>Description of the project results showcased in the video.</p>
     </section>
     <section id="project-results2" class="results-section">
