--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 and lives.</p>
         <h3>Project Results</h3>
         <div class="video-container">
-        <video id="project-video" autoplay loop muted controls width="60%" height="auto" poster="project_video_poster.jpg">
+        <video id="project-video" autoplay loop muted controls poster="project_video_poster.jpg">
             <source src="project_results_video.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
