--- a/index.html
+++ b/index.html
@@ -150,6 +150,7 @@
             right: 50%;
             transform: translateX(50%);
         }
+
 </style>
 </head>
 <body>
@@ -165,6 +166,8 @@
             <p>Mobile: 551-227-5645</p>
             <p>Email: skhanna5@stevens.edu</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/shashank-khanna/">Shashank Khanna</a></p>
+            <div id="Projects">These are my projects</div>
+            html { scroll-behavior: smooth;}
         </section>
         <section id="skills">
             <h2>Top Skills</h2>
@@ -239,6 +242,7 @@
         </section>
     </div>
     <!-- Project Results - Video -->
+    <a href="#Projects"></a>
     <section id="project-results" class="results-section">
         <h2>Project - Shape Shooter Game</h2>
             <p>Developed a Python-based arcade game utilizing Pygame library. Designed game mechanics, implemented player controls,
