--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <p>Mobile: 551-227-5645</p>
             <p>Email: skhanna5@stevens.edu</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/shashank-khanna/">Shashank Khanna</a></p>
-            <a href="#projects"></a>
+            <div id="projects"></div>
             <button onclick="scrollToProjects()">View Projects</button>
         </section>
         <section id="skills">
@@ -242,12 +242,6 @@
         </section>
     </div>
     <!-- Project Results - Video -->
-    <div id="projects">These are my projects</div>
-        <script>
-        function scrollToProjects() {
-            document.getElementById('Projects').scrollIntoView({ behavior: 'smooth' });
-        }
-        </script>
     <section id="project-results" class="results-section">
         <h2>Project - Shape Shooter Game</h2>
             <p>Developed a Python-based arcade game utilizing Pygame library. Designed game mechanics, implemented player controls,
@@ -314,8 +308,13 @@
                 }
             });
         }
+
     </script>
     </section>
+    <script>function scrollToProjects() {
+            document.getElementById('projects').scrollIntoView({ behavior: 'smooth' });
+        }
+    </script>
     <!-- Add more sections if needed -->
 </body>
 </html>
