--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
             <p>Mobile: 551-227-5645</p>
             <p>Email: skhanna5@stevens.edu</p>
             <p>LinkedIn: <a href="https://www.linkedin.com/in/shashank-khanna/">Shashank Khanna</a></p>
-            
+
             <button onclick="scrollToProjects()">View Projects</button>
         </section>
         <section id="skills">
@@ -312,7 +312,7 @@
     </script>
     </section>
     <script>function scrollToProjects() {
-            document.getElementById('projects').scrollIntoView({ behavior: 'smooth' });
+            document.getElementById('project-results').scrollIntoView({ behavior: 'smooth' });
         }
     </script>
     <!-- Add more sections if needed -->
