--- a/index.html
+++ b/index.html
@@ -278,8 +278,8 @@
                 </p><p>And then it uses OpenAI API to send a prompt along with the complete extracted text which is complied from the chunks, which is returned back in form of a output.</p>
                 Your browser does not support the video tag.
             </video>
-            <video id="projectresult2.mp4" autoplay loop muted controls width="50%" height="auto" poster="project_step_3_poster.jpg">
-                <source src="project_step_3_video.mp4" type="video/mp4">
+            <video id="project-step-3-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_3_poster.jpg">
+                <source src="projectresult2.mp4" type="video/mp4">
                 <p>The code finally outputs Minutes of Meeting as the prompt is specific to that. We can we an example output below:
                 </p>
                 Your browser does not support the video tag.
