--- a/index.html
+++ b/index.html
@@ -151,6 +151,47 @@
             transform: translateX(50%);
         }
         html { scroll-behavior: smooth;}
+
+                /* Menu icon and box styles */
+        .menu-icon {
+            width: 40px;
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            cursor: pointer;
+        }
+
+        .menu-box {
+            width: 200px;
+            background: #333;
+            position: absolute;
+            top: 70px;
+            left: 20px;
+            display: none; /* Initially hidden */
+            border-radius: 5px;
+            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+        }
+
+        .menu-box.show {
+            display: block; /* Show menu box when toggled */
+        }
+
+        .right-links {
+            padding: 10px;
+        }
+
+        .right-links a {
+            display: block;
+            color: #fff;
+            text-decoration: none;
+            padding: 5px 0;
+            text-align: center;
+        }
+
+        .right-links a:hover {
+            background: rgba(255, 255, 255, 0.1);
+            border-radius: 5px;
+        }
 </style>
 </head>
 <body>
@@ -160,6 +201,7 @@
         <p>Graduate Student Assistant at Stevens Institute of Technology | ExMphasis</p>
         <p>Jersey City, New Jersey, United States</p>
     </header>
+
     <div class="container">
         <section id="contact">
             <h2>Contact</h2>
@@ -168,6 +210,24 @@
             <p>LinkedIn: <a href="https://www.linkedin.com/in/shashank-khanna/">Shashank Khanna</a></p>
 
             <button onclick="scrollToProjects()">View Projects</button>
+        </section>
+        <section id="menu_about">
+        <!-- Menu Icon -->
+        <div class="menu-icon" onclick="toggleMenu()">
+            <img src="menu.png" alt="Menu Icon">
+        </div>
+        <!-- Menu Box -->
+        <div class="menu-box" id="menu">
+            <div class="right-links">
+                <a href="#projects">Projects</a>
+                <a href="#skills">Top Skills</a>
+                <a href="#certifications">Certifications</a>
+                <a href="#summary">Summary</a>
+                <a href="#experience">Experience</a>
+                <a href="#education">Education</a>
+                <!-- Add more menu links as needed -->
+            </div>
+        </div>
         </section>
         <section id="skills">
             <h2>Top Skills</h2>
@@ -327,6 +387,11 @@
                 }
             });
         }
+
+        function toggleMenu() {
+    var menu = document.getElementById('menu');
+    menu.classList.toggle('show'); // Toggle the 'show' class
+}
 
     </script>
     </section>
