--- a/index.html
+++ b/index.html
@@ -325,6 +325,7 @@
 <!-- Project Steps - Videos -->
 <section id="project-steps" class="results-section">
     <h2>Project Steps</h2>
+    <p>STEP 1</p>
     <div class="video-container">
         <video id="project-step-1-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_1_poster.jpg">
             <source src="project_step_1_video.mp4" type="video/mp4">
@@ -340,7 +341,7 @@
         <div class="step-arrow left" onclick="changeVideo('prev')">Step 1</div>
         <div class="step-arrow right" onclick="changeVideo('next')">Step 2</div>
     </div>
-
+    <p>STEP 2</p>
     <video id="project-step-2-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_2_poster.jpg">
         <source src="project_step_2_video.mp4" type="video/mp4">
         <p>The code then converts audio into text by splitting the audio into chunks of 30 words each using the recognize_google tag.</p>
@@ -355,7 +356,7 @@
     </div>
     <div class="step-arrow left" onclick="changeVideo('prev')">Step 2</div>
     <div class="step-arrow right" onclick="changeVideo('next')">Step 3</div>
-
+    <p>STEP 3</p>
     <video id="project-step-3-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_3_poster.jpg">
         <source src="projectresult2.mp4" type="video/mp4">
         <p>The code finally outputs Minutes of Meeting as the prompt is specific to that. We can see an example output below:</p>
