--- a/index.html
+++ b/index.html
@@ -326,10 +326,11 @@
 <section id="project-steps" class="results-section">
     <h2>Project Steps</h2>
     <p>STEP 1</p>
+    <p>The code 1st converts a video into an audio file. Here is an example video used.</p>
     <div class="video-container">
         <video id="project-step-1-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_1_poster.jpg">
             <source src="project_step_1_video.mp4" type="video/mp4">
-            <p>The code 1st converts a video into an audio file. Here is an example video used.</p>
+
             Your browser does not support the video tag.
         </video>
         <div class="arrow prev-arrow" onclick="changeVideo('prev')">
@@ -342,11 +343,13 @@
         <div class="step-arrow right" onclick="changeVideo('next')">Step 2</div>
     </div>
     <p>STEP 2</p>
+            <p>The code then converts audio into text by splitting the audio into chunks of 30 words each using the
+                recognize_google tag.</p>
+        <p>Then it uses OpenAI API to send a prompt along with the complete extracted text compiled from the chunks,
+            which is returned back in the form of an output.</p>
     <video id="project-step-2-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_2_poster.jpg">
         <source src="project_step_2_video.mp4" type="video/mp4">
-        <p>The code then converts audio into text by splitting the audio into chunks of 30 words each using the recognize_google tag.</p>
-        <p>Then it uses OpenAI API to send a prompt along with the complete extracted text compiled from the chunks, which is returned back in the form of an output.</p>
-        Your browser does not support the video tag.
+                Your browser does not support the video tag.
     </video>
     <div class="arrow prev-arrow" onclick="changeVideo('prev')">
         <i class="fas fa-chevron-left"></i>
@@ -357,9 +360,10 @@
     <div class="step-arrow left" onclick="changeVideo('prev')">Step 2</div>
     <div class="step-arrow right" onclick="changeVideo('next')">Step 3</div>
     <p>STEP 3</p>
+    <p>The code finally outputs Minutes of Meeting as the prompt is specific to that. We can see an example output below:</p>
     <video id="project-step-3-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_3_poster.jpg">
         <source src="projectresult2.mp4" type="video/mp4">
-        <p>The code finally outputs Minutes of Meeting as the prompt is specific to that. We can see an example output below:</p>
+
         Your browser does not support the video tag.
     </video>
     <div class="arrow prev-arrow" onclick="changeVideo('prev')">
