--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
         <!-- Menu Box -->
         <div class="menu-box" id="menu">
             <div class="right-links">
-                <a href="#projects">Projects</a>
+                <a href="#project-results">Projects</a>
                 <a href="#skills">Top Skills</a>
                 <a href="#certifications">Certifications</a>
                 <a href="#summary">Summary</a>
