--- a/index.html
+++ b/index.html
@@ -193,6 +193,10 @@
             background: rgba(255, 255, 255, 0.1);
             border-radius: 5px;
         }
+        .menu-icon img {
+            width: 20px; /* Adjust the width to your desired size */
+            height: auto; /* Maintain aspect ratio */
+        }
 </style>
 </head>
 <body>
