--- a/index.html
+++ b/index.html
@@ -403,6 +403,17 @@
     menu.classList.toggle('show'); // Toggle the 'show' class
 }
 
+function handleScroll() {
+            var menuIcon = document.querySelector('.menu-icon');
+            if (window.pageYOffset > 100) { // Adjust the value as needed
+                menuIcon.style.display = 'block';
+            } else {
+                menuIcon.style.display = 'none';
+            }
+        }
+        // Attach scroll event listener to handle menu icon visibility
+        window.addEventListener('scroll', handleScroll);
+
     </script>
     </section>
     <script>function scrollToProjects() {
