--- a/index.html
+++ b/index.html
@@ -154,25 +154,24 @@
         html { scroll-behavior: smooth;}
 
                 /* Menu icon and box styles */
-        .menu-icon {
-            width: 40px;
-            position: fixed; /* Change to fixed */
-            top: 20px;
-            left: 20px;
-            cursor: pointer;
-            z-index: 999; /* Ensure it's above other elements */
-        }
-
         .menu-box {
-            width: 200px;
-            background: #333;
-            position: absolute;
-            top: 70px;
-            left: 20px;
-            display: none; /* Initially hidden */
-            border-radius: 5px;
-            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
-        }
+    width: 200px;
+    background: #333;
+    position: absolute; /* Change position to absolute */
+    z-index: 999; /* Ensure it's above other elements */
+    display: none; /* Initially hidden */
+    border-radius: 5px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+}
+
+.menu-icon {
+    width: 40px;
+    position: fixed; /* Keep position fixed */
+    top: 20px;
+    left: 20px;
+    cursor: pointer;
+    z-index: 999; /* Ensure it's above other elements */
+}
 
         .menu-box.show {
             display: block; /* Show menu box when toggled */
