--- a/index.html
+++ b/index.html
@@ -154,14 +154,16 @@
         html { scroll-behavior: smooth;}
 
                 /* Menu icon and box styles */
-        .menu-box {
+.menu-box {
     width: 200px;
     background: #333;
     position: absolute; /* Change position to absolute */
-    z-index: 999; /* Ensure it's above other elements */
+    top: 70px; /* Adjust top position to align with the menu icon */
+    left: 20px; /* Adjust left position to align with the menu icon */
     display: none; /* Initially hidden */
     border-radius: 5px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+    z-index: 999; /* Ensure it's above other elements */
 }
 
 .menu-icon {
