--- a/index.html
+++ b/index.html
@@ -239,9 +239,9 @@
         <section id="skills">
             <h2>Top Skills</h2>
             <ul>
-                <li>Sales Management</li>
-                <li>Decision-Making</li>
-                <li>Risk Management</li>
+                <li>Technical: Python, SQL, Tableau</li>
+                <li>Tools: Agile Project Management, MS Excel</li>
+                <li>Concepts: Decision-Making, Risk Management, Applied AI, Predictive Modeling & Forecasting</li>
             </ul>
         </section>
         <section id="certifications">
