--- a/index.html
+++ b/index.html
@@ -337,18 +337,8 @@
     <div class="video-container">
         <video id="project-step-1-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_1_poster.jpg">
             <source src="project_step_1_video.mp4" type="video/mp4">
-
             Your browser does not support the video tag.
         </video>
-        <div class="arrow prev-arrow" onclick="changeVideo('prev')">
-            <i class="fas fa-chevron-left"></i>
-        </div>
-        <div class="arrow next-arrow" onclick="changeVideo('next')">
-            <i class="fas fa-chevron-right"></i>
-        </div>
-        <div class="step-arrow left" onclick="changeVideo('prev')">Step 1</div>
-        <div class="step-arrow right" onclick="changeVideo('next')">Step 2</div>
-    </div>
     <p>STEP 2</p>
             <p>The code then converts audio into text by splitting the audio into chunks of 30 words each using the
                 recognize_google tag.</p>
@@ -358,14 +348,6 @@
         <source src="project_step_2_video.mp4" type="video/mp4">
                 Your browser does not support the video tag.
     </video>
-    <div class="arrow prev-arrow" onclick="changeVideo('prev')">
-        <i class="fas fa-chevron-left"></i>
-    </div>
-    <div class="arrow next-arrow" onclick="changeVideo('next')">
-        <i class="fas fa-chevron-right"></i>
-    </div>
-    <div class="step-arrow left" onclick="changeVideo('prev')">Step 2</div>
-    <div class="step-arrow right" onclick="changeVideo('next')">Step 3</div>
     <p>STEP 3</p>
     <p>The code finally outputs Minutes of Meeting as the prompt is specific to that. We can see an example output below:</p>
     <video id="project-step-3-video" autoplay loop muted controls width="50%" height="auto" poster="project_step_3_poster.jpg">
@@ -373,11 +355,11 @@
 
         Your browser does not support the video tag.
     </video>
-    <div class="arrow prev-arrow" onclick="changeVideo('prev')">
-        <i class="fas fa-chevron-left"></i>
     </div>
-    <!-- No need for a right arrow here as this is the last step -->
-    <div class="step-arrow left" onclick="changeVideo('prev')">Step 3</div>
+    <div>
+        <h2>Project- Spotify Top Charts Data Analysis using Embedded Analytics with Tableau</h2>
+        <div class='tableauPlaceholder' id='viz1714711230006' style='position: relative'><noscript><a href='#'><img alt='Dashboard 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;EM&#47;EM622Final&#47;Dashboard1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='EM622Final&#47;Dashboard1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;EM&#47;EM622Final&#47;Dashboard1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='language' value='en-US' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1714711230006');                    var vizElement = divElement.getElementsByTagName('object')[0];                    if ( divElement.offsetWidth > 800 ) { vizElement.style.width='1700px';vizElement.style.height='877px';} else if ( divElement.offsetWidth > 500 ) { vizElement.style.width='1700px';vizElement.style.height='877px';} else { vizElement.style.width='100%';vizElement.style.height='727px';}                     var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    </div>
 </section>
     <!-- JavaScript for video navigation -->
     <script>
