--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
         </section>
     </div>
     <!-- Project Results - Video -->
-    <section id="project-results" class="results-section">
+    <section id="project-results">
         <h2>Project - Shape Shooter Game</h2>
             <p>Developed a Python-based arcade game utilizing Pygame library. Designed game mechanics, implemented player controls,
                 and managed game entities. Incorporated features such as shooting arrows, avoiding obstacles, and tracking scores
